<resources>
    <string name="app_name">Lalito</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="speed">Speed</string>
    <string name="heading">Heading</string>
    <string name="pitch">Pitch</string>
    <string name="roll">Roll</string>

    <string name="lat_es">Lat</string>
    <string name="lon_es">Lon</string>
    <string name="speed_es">Veloc.</string>
    <string name="heading_es">Rumbo</string>
    <string name="pitch_es">Inclinacion</string>
    <string name="roll_es">Balanceo</string>
    <string name="compass">Compass</string>
    <string name="clinometer">Clinometer</string>
    <string name="data">Data</string>
    <string name="principal">Principal</string>
    <string name="settings">Settings</string>
    <string name="channel">Channel</string>
    <string name="pitch_alarm_threshold">Pitch Alarm Threshold</string>
    <string name="roll_alarm_threshold">Roll Alarm Threshold</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="settings_alarms">Alarm Setting</string>
    <string name="channel_setting">Channel Setting</string>
    <string name="channel_select">Channel Select</string>
    <string name="language_select">Language Select</string>
    <string name="about_title">About</string>
    <string name="track">Track</string>
    <string name="ruler">Ruler</string>
    <string name="about_message">"Boat tracking program\n\nMade by: Hdelacruz\nEmail: hugo_delacruz@hotmail.com"</string>

    <string name="action_connect_bluetooth">Conectar Bluetooth</string>
    <string name="bluetooth_connected">Bluetooth Conectado</string>
    <string name="bluetooth_disconnected">Bluetooth Desconectado</string>
    <string name="bluetooth_error">Error de Bluetooth</string>
    <string name="select_device">Seleccionar Dispositivo</string>
    <string name="thingspeak_write_key">ThingSpeak Write Key</string>
    <string name="pref_thingspeak_write_key">thingspeak_write_key</string>
</resources>