<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/languageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language" />

    <Button
        android:id="@+id/channelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/channel" />

    <Button
        android:id="@+id/alarmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_alarms" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ThingSpeak Write API Key"
        android:paddingTop="20dp"/>

    <EditText
        android:id="@+id/apiKeyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Write API Key"
        android:inputType="text"/>

    <Button
        android:id="@+id/saveApiKeyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save API Key" />

</LinearLayout>
